chore(post): type struct adjust
